<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.quind.sistema</groupId>
		<artifactId>PruebaTecnica</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../../../pom.xml</relativePath>
	</parent>
	<packaging>jar</packaging>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<artifactId>api-rest</artifactId>
	<version>1.0.0</version>
	<name>api-rest</name>
	<description>api-rest</description>

	<dependencies>
		<dependency>
			<groupId>com.quind.sistema</groupId>
			<artifactId>model</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>com.quind.sistema</groupId>
			<artifactId>usecase</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
</project>
